[package]
name = "room_lighting_rpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_ws281x = "0.4.4"
serde_derive = "1.0.192"
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"] }
warp = "0.3.6"
